# SSR-backend

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  Rocket.toml  create_tables.sql  todo.md
src/: api.rs  database.rs  logger.rs  main.rs  model.rs  moedl.rs  timer.rs  utils.rs
src/database/: common.rs  init.rs  reservation.rs  seat.rs  timeslot.rs  user.rs
src/model/: common.rs  constant.rs  reservation.rs  seat.rs  timeslot.rs  token.rs  user.rs  validate_utils.rs
