[package]
name = "study_seat_reserve"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "=0.5.0-rc.3", features = ["json"] }
serde = "1.0.160"
serde_derive = "1.0.160"
serde_json = "1.0.96"
rand = "0.8.5"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11.18", features = ["json", "multipart", "blocking"] }
rusqlite = { version = "0.29.0", features = ["bundled", "chrono", "array"] }
dotenv = "0.15.0"
chrono = "0.4.26"

[profile.dev]
debug = true
