[package]
name = "study_seat_reserve"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "=0.5.0-rc.3", features = ["json"] }
serde = "1.0.160"
serde_derive = "1.0.160"
serde_json = "1.0.96"
rand = "0.8.5"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11.18", features = ["json", "multipart", "blocking"] }
rusqlite = { version = "0.29.0", features = ["bundled", "chrono", "array"] }
dotenv = "0.15.0"
chrono = "0.4.26"
regex = "1"
log = "0.4"
env_logger = "0.10"
ansi_term = "0.12.1"
bcrypt = "0.15"
uuid = { version = "1.5.0", features = ["v4", "serde", "fast-rng"] }
# validators = { version = "0.24", features = ["rocket"] }
validator = { version = "0.16", features = ["derive"] }
lazy_static = "1.4.0"

[profile.dev]
debug = true
