[package]
name = "study_seat_reserve"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "=0.5.0-rc.3", features = ["json"] }
serde = "1.0.160"
serde_derive = "1.0.160"
serde_json = "1.0.96"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11.18", features = ["json", "multipart", "blocking"] }
dotenv = "0.15.0"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
log = "0.4"
env_logger = "0.10"
ansi_term = "0.12.1"
bcrypt = "0.15"
uuid = { version = "1.5.0", features = ["v4", "serde", "fast-rng"] }
validator = { version = "0.16", features = ["derive"] }
lettre = "0.11.2"
jsonwebtoken = "9.1.0"
sqlx = { version = "0.7", features = [
    "runtime-tokio-native-tls",
    "sqlite",
    "chrono",
] }
rusqlite = "0.30"
mockito = "1.1.1"]
tempdir = "0.3.7"
[profile.dev]
debug = true
